; ModuleID = '/home/carl/AnghaBench/netdata/web/api/queries/min/extr_min.c_grouping_reset_min.c'
source_filename = "/home/carl/AnghaBench/netdata/web/api/queries/min/extr_min.c_grouping_reset_min.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }
%struct.grouping_min = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grouping_reset_min(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.grouping_min*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to %struct.grouping_min*
  store %struct.grouping_min* %8, %struct.grouping_min** %3, align 8
  %9 = load %struct.grouping_min*, %struct.grouping_min** %3, align 8
  %10 = getelementptr inbounds %struct.grouping_min, %struct.grouping_min* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.grouping_min*, %struct.grouping_min** %3, align 8
  %12 = getelementptr inbounds %struct.grouping_min, %struct.grouping_min* %11, i32 0, i32 0
  store i64 0, i64* %12, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
